Own version of reveal..

--- a/reveal.js/css/theme/template/theme.scss
+++ b/reveal.js/css/theme/template/theme.scss
@@ -207,8 +207,7 @@ body {
 	text-align: right;
 }
 
-.reveal table tbody tr:last-child th,
-.reveal table tbody tr:last-child td {
+.reveal table tr:last-child td {
 	border-bottom: none;
 }
 
