--- a/reveal.js/css/reveal.scss
+++ b/reveal.js/css/reveal.scss
@@ -23,7 +23,7 @@ html, body, .reveal div, .reveal span, .reveal applet, .reveal object, .reveal i
 .reveal article, .reveal aside, .reveal canvas, .reveal details, .reveal embed,
 .reveal figure, .reveal figcaption, .reveal footer, .reveal header, .reveal hgroup,
 .reveal menu, .reveal nav, .reveal output, .reveal ruby, .reveal section, .reveal summary,
-.reveal time, .reveal mark, .reveal audio, .reveal video {
+.reveal time, .reveal mark, .reveal audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -134,38 +134,6 @@ html:-moz-full-screen-ancestor {
 
 	&.visible {
 		text-decoration: line-through;
-	}
-}
-
-.reveal .slides section .fragment.fade-up {
-	transform: translate(0, 20%);
-
-	&.visible {
-		transform: translate(0, 0);
-	}
-}
-
-.reveal .slides section .fragment.fade-down {
-	transform: translate(0, -20%);
-
-	&.visible {
-		transform: translate(0, 0);
-	}
-}
-
-.reveal .slides section .fragment.fade-right {
-	transform: translate(-20%, 0);
-
-	&.visible {
-		transform: translate(0, 0);
-	}
-}
-
-.reveal .slides section .fragment.fade-left {
-	transform: translate(20%, 0);
-
-	&.visible {
-		transform: translate(0, 0);
 	}
 }
 
@@ -1022,8 +990,7 @@ html:-moz-full-screen-ancestor {
 	perspective: 700px;
 
 	.slides section {
-		height: 100%;
-		top: 0 !important;
+		height: 700px;
 		opacity: 1 !important;
 		overflow: hidden;
 		visibility: visible !important;
@@ -1205,7 +1172,6 @@ html:-moz-full-screen-ancestor {
 
 	.reveal .overlay .viewport {
 		position: absolute;
-		display: flex;
 		top: 40px;
 		right: 0;
 		bottom: 0;
@@ -1242,8 +1208,8 @@ html:-moz-full-screen-ancestor {
 
 	.reveal .overlay.overlay-help .viewport .viewport-inner {
 		width: 600px;
-		margin: auto;
-		padding: 20px 20px 80px 20px;
+		margin: 0 auto;
+		padding: 60px;
 		text-align: center;
 		letter-spacing: normal;
 	}
@@ -1255,13 +1221,13 @@ html:-moz-full-screen-ancestor {
 	.reveal .overlay.overlay-help .viewport .viewport-inner table {
 		border: 1px solid #fff;
 		border-collapse: collapse;
-		font-size: 16px;
+		font-size: 14px;
 	}
 
 	.reveal .overlay.overlay-help .viewport .viewport-inner table th,
 	.reveal .overlay.overlay-help .viewport .viewport-inner table td {
 		width: 200px;
-		padding: 14px;
+		padding: 10px;
 		border: 1px solid #fff;
 		vertical-align: middle;
 	}
@@ -1409,3 +1375,5 @@ html:-moz-full-screen-ancestor {
 .zoomed .reveal .roll span:after {
 	visibility: hidden;
 }
+
+
