--- a/css/theme.css
+++ b/css/theme.css
@@ -61,7 +61,7 @@ Headers
 }
 
 .reveal section[data-background="#6C1D5F"] b, .reveal section[data-background="#6C1D5F"] strong {
-  color: #20B2A6;
+  color: #EFEFEF;
 }
 
 .reveal h1 {
