--- a/css/theme.css
+++ b/css/theme.css
@@ -153,7 +153,9 @@ Other
 .reveal table {}
 .reveal table th {}
   .reveal table tr {}
-.reveal table td {}
+.reveal table td {
+  padding: 0 10px 0  0;
+}
 
 .reveal sup {}
 .reveal sub {}
